kubernetes/deployment-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-deployment
  namespace: devops-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      imagePullSecrets:
        - name: registry-credentials-secret
      containers:
        - name: springboot-app
          image: biseragaleska/spring-boot-recipes:main-ca34e29
          ports:
            - containerPort: 9191
